--- a/TD/MOMTopic/MOMTopic/MOMTopic.csproj
+++ b/TD/MOMTopic/MOMTopic/MOMTopic.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5270759F-AB6C-4B5B-A5FE-C252A74B83FA}</ProjectGuid>
+    <ProjectGuid>{8AB5B232-184B-4C60-B5F7-BB6E45DAD90E}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>MOMReceiverPorducer</RootNamespace>
-    <AssemblyName>MOMReceiverPorducer</AssemblyName>
+    <RootNamespace>MOMTopic</RootNamespace>
+    <AssemblyName>MOMTopic</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -33,9 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="RabbitMQ.Client">
-      <HintPath>..\..\..\..\..\..\RabbitMQ.Client.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Producer.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
